 - groups: add defalt user to 'lxd' group.  Create groups listed
   for a user if they do not exist. (LP: #1539317)
 - dmi data: fix failure of reading dmi data for unset dmi values
 - doc: mention label for nocloud datasource must be 'cidata' [Peter Hurley]
 - ssh_pwauth: fix module to support 'unchanged' and match behavior
   described in documentation [Chris Cosby]

0.7.6:
 - open 0.7.6
 - Enable vendordata on CloudSigma datasource (LP: #1303986)
 - Poll on /dev/ttyS1 in CloudSigma datasource only if dmidecode says
   we're running on cloudsigma (LP: #1316475) [Kiril Vladimiroff]
 - SmartOS test: do not require existance of /dev/ttyS1. [LP: #1316597]
 - doc: fix user-groups doc to reference plural ssh-authorized-keys
   (LP: #1327065) [Joern Heissler]
 - fix 'make test' in python 2.6
 - support jinja2 as a templating engine.  Drop the hard requirement on
   cheetah.  This helps in python3 effort. (LP: #1219223)
 - change install path for systemd files to /lib/systemd/system
   [Dimitri John Ledkov]
 - change trunk debian packaging to use pybuild and drop cdbs.
   [Dimitri John Ledkov]
 - SeLinuxGuard: remove invalid check that looked for stat.st_mode in os.lstat.
 - do not write comments in /etc/timezone (LP: #1341710)
 - ubuntu: provide 'ubuntu-init-switch' module to aid in systemd testing.
 - status/result json: remove 'end' entry which was always null
 - systemd: make cloud-init block ssh service startup to guarantee keys
   are generated. [Jordan Evans] (LP: #1333920)
 - default settings: fix typo resulting in OpenStack and GCE not working
   unless config explicitly provided (LP: #1329583) [Garrett Holmstrom])
 - fix rendering resolv.conf if no 'options' are provided (LP: #1328953)
 - docs: fix disk-setup to reference 'table_type' [Rail Aliiev] (LP: #1313114)
 - ssh_authkey_fingerprints: fix bug that prevented disabling the module.
   (LP: #1340903) [Patrick Lucas]
 - no longer use pylint as a checker, fix pep8 [Jay Faulkner].